Changelog for mk-query-profiler and mk-profile-compact:

   * Added --session command-line option.
   * Servers without session variables crashed the tool (bug #1840320).

2007-11-04: version 1.1.6

   * Made command-line help easier to use.
   * Removed the dependency on Term::ReadKey.
   * Replaced some code with modules that are unit-tested.

2007-09-20: version 1.1.5

   * Documentation didn't specify how queries in FILE are separated.

2007-09-01: version 1.1.4

   * SHOW STATUS inconsistencies after a FLUSH were skewing status.

2007-08-23: version 1.1.3

   * MySQL socket connection option didn't work.
   * Large queries overflowed the formatting room available.

2007-06-22: version 1.1.2

   * Documentation

2007-06-10: version 1.1.1

   * Added --defaults-file option.
   * Added standard --version command-line option.
   * Added --defaults-file option.

2007-04-05: version 1.1.0

   * Profile "Potential filesorts".
   * Allow to read STDIN, many files possible.
   * Allow to execute other programs in --external mode.
   * Make columns always have headings for consistency and scriptability.
   * Add mk-profile-compact helper tool.

2007-04-01: version 1.0.3

   * Profile Bytes_received and Bytes_sent.
   * Add --external option so you can profile another program without running its queries.
   * Fix commandline options: change --flush and --verbose, and change --debug to --verify.
   * Fix behavior of --calibrate.  It was not calibrating by default.  This was
     making things look too expensive.
   * More documentation.

2007-03-25: version 1.0.2

   * Rewrite the GetOpt::Long code and rely on DBD to read MySQL option files.
   * Documentation.

2007-03-02: version 1.0.1

   * Fix prompting

2007-03-01: version 1.0.0

   * Initial re-release on Sourceforge.
   * A lot of improvements as I've learned more about coding :-)