@@ -1,7 +1,9 @@
 Changelog for mk-query-profiler and mk-profile-compact:
 
+   * Updated shared code.
    * Added --session command-line option.
    * Servers without session variables crashed the tool (bug #1840320).
+   * The meaning of --innodb was reversed.
 
 2007-11-04: version 1.1.6
 
